<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.fossify.camera.stamp.StampOverlayView
        android:id="@+id/stamp_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/preview_view"
        app:layout_constraintEnd_toEndOf="@id/preview_view"
        app:layout_constraintStart_toStartOf="@id/preview_view"
        app:layout_constraintTop_toTopOf="@id/preview_view" />

    <View
        android:id="@+id/shutter_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@android:color/black" />

    <FrameLayout
        android:id="@+id/top_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/layout_top"
            layout="@layout/layout_top" />

        <include
            android:id="@+id/layout_flash"
            layout="@layout/layout_flash" />

        <include
            android:id="@+id/layout_timer"
            layout="@layout/layout_timer" />

    </FrameLayout>

    <TextSwitcher
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_options" />

    <View
        android:id="@+id/bottom_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/overlay_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/camera_mode_holder" />

    <LinearLayout
        android:id="@+id/zoom_bar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/big_margin"
        android:paddingEnd="@dimen/big_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/camera_mode_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/zoom_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/zoom_value_background"
            android:contentDescription="@string/zoom"
            android:gravity="center"
            android:minWidth="52dp"
            android:paddingHorizontal="@dimen/medium_margin"
            android:paddingVertical="@dimen/small_margin"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:text="1.0×" />

        <com.google.android.material.slider.Slider
            android:id="@+id/zoom_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_weight="1"
            android:contentDescription="@string/zoom"
            android:visibility="gone"
            android:valueFrom="1"
            android:valueTo="2"
            app:labelBehavior="gone"
            app:thumbColor="@android:color/white"
            app:trackColorActive="@android:color/white"
            app:trackColorInactive="#66FFFFFF"
            app:tickVisible="false" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/camera_mode_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/shutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/camera_mode_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_margin"
            android:background="@android:color/transparent"
            app:tabBackground="@drawable/tab_indicator"
            app:tabIndicator="@null"
            app:tabMode="auto"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/md_grey_600_dark"
            app:tabTextColor="@color/md_grey_white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo" />

        </com.google.android.material.tabs.TabLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/video_rec_curr_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/smaller_margin"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/shutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00:00"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/last_photo_video_preview"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@drawable/camera_button_background"
        android:contentDescription="@string/view_last_media"
        android:padding="@dimen/tiny_margin"
        app:layout_constraintBottom_toBottomOf="@id/shutter"
        app:layout_constraintEnd_toStartOf="@id/shutter"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shutter"
        tools:src="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/shutter"
        android:layout_width="@dimen/large_icon_size"
        android:layout_height="@dimen/large_icon_size"
        android:layout_marginBottom="@dimen/big_margin"
        android:contentDescription="@string/shutter"
        android:src="@drawable/ic_shutter_animated"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <ImageView
        android:id="@+id/toggle_camera"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@drawable/camera_button_background"
        android:contentDescription="@string/toggle_camera"
        android:padding="@dimen/medium_margin"
        android:src="@drawable/ic_flip_camera_vector"
        app:layout_constraintBottom_toBottomOf="@id/shutter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/shutter"
        app:layout_constraintTop_toTopOf="@id/shutter" />

    <ImageView
        android:id="@+id/refresh_gps"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/camera_button_background"
        android:contentDescription="@string/refresh_gps"
        android:padding="9dp"
        android:src="@drawable/ic_gps_refresh_vector"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintBottom_toBottomOf="@id/camera_mode_holder"
        app:layout_constraintEnd_toEndOf="@id/last_photo_video_preview"
        app:layout_constraintStart_toStartOf="@id/last_photo_video_preview"
        app:layout_constraintTop_toTopOf="@id/camera_mode_holder" />

    <ImageView
        android:id="@+id/remarks_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/camera_button_background"
        android:contentDescription="@string/stamp_remarks"
        android:padding="9dp"
        android:src="@drawable/ic_remarks_vector"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintBottom_toBottomOf="@id/camera_mode_holder"
        app:layout_constraintEnd_toEndOf="@id/toggle_camera"
        app:layout_constraintStart_toStartOf="@id/toggle_camera"
        app:layout_constraintTop_toTopOf="@id/camera_mode_holder" />

</androidx.constraintlayout.widget.ConstraintLayout>
